[package]
name = "dicommanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
dicom = "0.5.3"
dicom-pixeldata = "0.1.4"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.6.0"
walkdir = "2.3.2"
clap = { version = "4.0.26", features = ["derive"] }
console = "0.15.2"
xlsxwriter = "0.5.0"
